# MaskForge

./: .gitignore  AGENT.md  README.md  activate.sh  task.md
medsam1/: .gitignore  AGENT.md  README.md  activate.sh  app.py  environment.yml  pyproject.toml  tracker.md
medsam1/scripts/: bootstrap_medsam.py  download_checkpoint.py
medsam1/src/medsam_prompt/: __init__.py  canvas_prompts.py  inference.py  model.py  preprocessing.py  streamlit_compat.py  visualization.py
medsam1/tests/: test_canvas_prompts.py  test_preprocessing.py  test_prompts.py  test_streamlit_compat.py  test_visualization.py
medsam3/: .env.example  .gitignore  AGENT.md  README.md  activate.sh  app.py  environment.yml  pyproject.toml  tracker.md
medsam3/scripts/: bootstrap_medsam3.py  download_model.py  download_samples.py  test_inference.py
medsam3/src/medsam3_app/: __init__.py  canvas_prompts.py  inference.py  models.py  streamlit_compat.py  visualization.py
medsam3/tests/: test_canvas_prompts.py  test_inference.py  test_preprocessing.py  test_streamlit_compat.py  test_visualization.py
sam3/: .gitignore  AGENT.md  README.md  activate.sh  app.py  environment.yml  pyproject.toml  tracker.md
sam3/scripts/: bootstrap_sam3.py  test_inference.py
sam3/src/sam3_app/: __init__.py  canvas_prompts.py  inference.py  models.py  preprocessing.py  streamlit_compat.py  visualization.py
sam3/tests/: test_app.py  test_canvas_prompts.py  test_inference.py  test_models.py  test_preprocessing.py  test_streamlit_compat.py  test_visualization.py
segmentation_labeler/: .gitignore  Makefile  README.md  pyproject.toml
segmentation_labeler/backend/seglabeler/: __init__.py  api.py  cli.py  db.py  exports.py  importers.py  mask_ops.py  schemas.py
segmentation_labeler/backend/tests/: conftest.py  test_mask_ops.py  test_projects.py  test_workflow.py
segmentation_labeler/frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
segmentation_labeler/frontend/src/: App.tsx  api.ts  maskDrawing.ts  styles.css  types.ts
segmentation_labeler/frontend/src/components/: CanvasEditor.tsx  ClassManager.tsx  ImportExport.tsx  ProjectScreen.tsx  Toolbar.tsx  Workspace.tsx
segmentation_labeler/frontend/tests/: ProjectScreen.test.tsx  Toolbar.test.tsx  Workspace.test.tsx  setup.ts
segmentation_labeler/frontend/tests/e2e/: labeling.spec.ts
segmentation_labeler/scripts/: dev.sh
