[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medsam3-streamlit"
version = "0.1.0"
description = "Streamlit interface for official MedSAM 3 rectangle-guided inference"
requires-python = ">=3.10,<3.13"
dependencies = [
  "huggingface_hub>=0.30,<2",
  "numpy>=1.26,<3",
  "Pillow>=10,<13",
  "PyYAML>=6,<7",
  "streamlit>=1.45,<2",
  "streamlit-drawable-canvas>=0.9,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
